upgrade json return for tweets
